--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<p>Grade 9 &nbsp;&bull;&nbsp; Campion B &nbsp;&bull;&nbsp; Don't let fear keep you quiet</p>
 						<nav>
 							<ul>
-								<li><a href="https://www.instagram.com/windows_xpe/?utm_medium=copy_link&fbclid=IwAR3qdBtgtHvvAr58ZanPvSV13gH5_u5gNTPwudXOpzwmy1nbfb9tTB4CTHU" class="<i class="fa-brands fa-instagram"></i>"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/windows_xpe/?utm_medium=copy_link&fbclid=IwAR3qdBtgtHvvAr58ZanPvSV13gH5_u5gNTPwudXOpzwmy1nbfb9tTB4CTHU" class="fab fa-instagram"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.facebook.com/xavierpaul.evangelista.900" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
