--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<ul>
 								<li><a href="https://www.instagram.com/windows_xpe/?utm_medium=copy_link&fbclid=IwAR3qdBtgtHvvAr58ZanPvSV13gH5_u5gNTPwudXOpzwmy1nbfb9tTB4CTHU" class="fab fa-instagram"><span class="label">instagram</span></a></li>
 								<li><a href="https://www.facebook.com/xavierpaul.evangelista.900" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="https://twitter.com/WindowsXPE" class="fa-brands fa-twitter"><span class="label">twitter</span></a></li>
 								<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 								<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
